[package]
name = "aero-d3d11"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aero-gpu = { path = "../aero-gpu" }
aero-dxbc = { path = "../aero-dxbc" }
aero-protocol = { path = "../../emulator/protocol" }
anyhow = "1.0"
futures-intrusive = "0.5"
pollster = "0.3"
wgpu = "0.20"

[dev-dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
naga = { version = "24.0.0", default-features = false, features = ["wgsl-in"] }

[[test]]
name = "d3d11_smoke"
path = "../../tests/d3d11_smoke.rs"
