[package]
name = "aero-d3d11"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aero-gpu = { path = "../aero-gpu" }
aero-protocol = { path = "../../emulator/protocol" }
aero-dxbc = { path = "../aero-dxbc" }
anyhow = "1.0"
futures-intrusive = "0.5"
pollster = "0.3"
wgpu = "0.20"

[target.'cfg(target_arch = "wasm32")'.dependencies]
blake3 = "1.5.0"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
aero-dxbc = { path = "../aero-dxbc", features = ["test-utils"] }
bytemuck = { version = "1.14", features = ["derive"] }
naga = { version = "24.0.0", default-features = false, features = ["wgsl-in"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[test]]
name = "d3d11_smoke"
path = "../../tests/d3d11_smoke.rs"

[[bench]]
name = "dxbc_wgsl"
harness = false
