[package]
name = "aero-d3d9"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# Enables the robust DXBC parser tests and utilities (via `aero-dxbc`'s `robust`
# feature).
dxbc-robust = ["aero-dxbc/robust"]

[dependencies]
anyhow = "1"
bitflags = "2"
blake3 = "1.5.0"
bytemuck = { version = "1.14", features = ["derive"] }
# Shared DXBC container parsing.
aero-dxbc = { path = "../aero-dxbc" }
futures-intrusive = "0.5"
half = "2.7.1"
hashbrown = "0.16"
thiserror = "2.0.9"
tracing = "0.1"
# WebGPU pipeline creation/state translation.
lru = "0.16"
wgpu = "0.20"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
aero-dxbc = { path = "../aero-dxbc", features = ["test-utils"] }
aero-gpu-utils = { path = "../aero-gpu-utils" }
futures = "0.3"
insta = "1.39.0"
naga = { version = "24.0.0", default-features = false, features = ["wgsl-in"] }
pollster = "0.3"
pretty_assertions = "1.4.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[[test]]
name = "d3d9_state_translate"
path = "../../tests/state_translate.rs"

[[test]]
name = "d3d9_blend_depth_stencil"
path = "../../tests/d3d9_blend_depth_stencil.rs"

[[test]]
name = "d3d9_vertex_input"
path = "../../tests/d3d9_vertex_input.rs"

[[bench]]
name = "shader_translation"
harness = false

[[test]]
name = "dxbc_parser"
path = "tests/dxbc_parser.rs"
required-features = ["dxbc-robust"]
