[package]
name = "aero-devices-gpu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
# Native in-process executor backend wrapper (wgpu-based). Kept feature-gated so
# `aero-devices-gpu` remains lightweight and WASM-friendly by default.
aerogpu-native = ["dep:aero-gpu", "dep:pollster"]
# Compatibility alias: the original proposal called this `wgpu-backend`.
wgpu-backend = ["aerogpu-native"]

[dependencies]
aero-devices = { path = "../devices" }
aero-protocol = { path = "../../emulator/protocol" }
aero-gpu-vga = { path = "../aero-gpu-vga" }
aero-io-snapshot = { path = "../aero-io-snapshot" }
memory = { path = "../memory" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Host-only wgpu-based backend wrapper. Kept out of wasm32 builds even if the feature is
# accidentally enabled, so misconfigured wasm32 invocations fail quickly without compiling the
# native GPU stack.
aero-gpu = { path = "../aero-gpu", optional = true }
pollster = { version = "0.3", optional = true }

[dev-dependencies]
pretty_assertions = "1"

[[test]]
name = "aerogpu_end_to_end"
path = "tests/aerogpu_end_to_end.rs"
required-features = ["wgpu-backend"]

[[test]]
name = "aerogpu_native_smoke"
path = "tests/aerogpu_native_smoke.rs"
required-features = ["aerogpu-native"]
