[package]
name = "aero-devices-nvme"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
aero-devices = { path = "../devices" }
aero-io-snapshot = { path = "../aero-io-snapshot" }
aero-platform = { path = "../platform" }
aero-storage = { path = "../aero-storage" }
aero-storage-adapters = { path = "../aero-storage-adapters" }
memory = { path = "../memory" }

[dev-dependencies]
aero-devices-storage = { path = "../aero-devices-storage" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[bench]]
name = "nvme_vs_ahci"
harness = false
