[package]
name = "aero-dxbc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
md5 = ["dep:md5"]
test-utils = []
robust = []

[dependencies]
md5 = { version = "0.7.0", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[[bench]]
name = "dxbc_parse"
harness = false
