[package]
name = "aero-emulator"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]

[dev-dependencies]

[[test]]
name = "vbe_smoke"
path = "../../tests/vbe_smoke.rs"

[[test]]
name = "aerogpu_ring"
path = "tests/wasm/aerogpu_ring.rs"

[[test]]
name = "aerogpu_smoke_present"
path = "tests/wasm/aerogpu_smoke_present.rs"
