[package]
name = "aero-gpu-trace-replay"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aero-gpu-trace = { path = "../aero-gpu-trace" }
aero-protocol = { path = "../../emulator/protocol" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
png = "0.18"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
