[package]
name = "aero-gpu-vga"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aero-io-snapshot = { path = "../aero-io-snapshot", optional = true }
memory = { path = "../memory", optional = true }
aero-platform = { path = "../platform", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aero-shared = { path = "../aero-shared" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
aero-shared = { path = "../aero-shared", optional = true }

[features]
default = []
wasm-threaded = ["dep:aero-shared"]
io-snapshot = ["dep:aero-io-snapshot"]
integration-memory = ["dep:memory"]
integration-platform = ["dep:aero-platform"]
integration = ["integration-memory", "integration-platform"]

[dev-dependencies]
aero-io-snapshot = { path = "../aero-io-snapshot" }
