[package]
name = "aero-gpu-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
# Internal feature used by the build system to ensure the threaded/shared-memory
# build is "thread-ready" for wasm-bindgen's threads transform. This must not
# affect the public JS API.
wasm-threaded = []

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
aero-gpu = { path = "../aero-gpu" }
aero-d3d9 = { path = "../aero-d3d9" }
aero-protocol = { path = "../../emulator/protocol" }
bytemuck = { version = "1.14", features = ["derive"] }
futures-intrusive = "0.5"
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["OffscreenCanvas"] }
wgpu = { version = "0.20", features = ["webgl"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
