[package]
name = "aero-gpu"
version = "0.1.0"
edition = "2021"

[features]
# Optional tile-based diffing when the caller doesn't supply dirty rectangles.
# Kept off by default until validated for correctness/perf across browsers.
diff-engine = []

[dependencies]
bcdec_rs = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }
bitflags = "2.4"
futures-intrusive = "0.5"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
wgpu = "0.20"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
lru = "0.12"

# Shared-memory framebuffer protocol (CPU worker ↔ GPU worker).
aero-shared = { path = "../aero-shared" }

[dev-dependencies]
pollster = "0.3"
pretty_assertions = "1"
serde_json = "1"
