[package]
name = "aero-gpu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# Optional tile-based diffing when the caller doesn't supply dirty rectangles.
# Kept off by default until validated for correctness/perf across browsers.
diff-engine = []

[dependencies]
bcdec_rs = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }
bitflags = "2.4"
futures-intrusive = "0.5"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
wgpu = "0.20"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
lru = "0.16"
tracing = "0.1"
blake3 = "1.5.0"

# Shared-memory framebuffer protocol (CPU worker ↔ GPU worker).
aero-d3d9 = { path = "../aero-d3d9" }
aero-shared = { path = "../aero-shared" }
aero-protocol = { path = "../../emulator/protocol" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_json = "1"
wasm-bindgen = "0.2"

[dev-dependencies]
pollster = "0.3"
pretty_assertions = "1"
serde_json = "1"
naga = { version = "0.20.0", features = ["wgsl-in", "glsl-out"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
