[package]
name = "aero-gpu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
# `cargo bench -p aero-gpu` is used for Criterion microbenches; avoid also compiling/running the
# library test harness as a benchmark target (which can pull in unit tests and slow down bench
# runs).
bench = false

[features]
# Optional tile-based diffing when the caller doesn't supply dirty rectangles.
# Kept off by default until validated for correctness/perf across browsers.
diff-engine = []
wgpu = []

[dependencies]
bcdec_rs = "0.2"
bytemuck = { version = "1.14", features = ["derive"] }
bitflags = "2.4"
futures-intrusive = "0.5"
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
wgpu = "0.20"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
lru = "0.16"
tracing = "0.1"
blake3 = "1.5.0"

# Shared-memory framebuffer protocol (CPU worker ↔ GPU worker).
aero-d3d9 = { path = "../aero-d3d9" }
aero-dxbc = { path = "../aero-dxbc" }
aero-shared = { path = "../aero-shared" }
aero-protocol = { path = "../../emulator/protocol" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
serde_json = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1.1"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
js-sys = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }
aero-gpu-trace = { path = "../aero-gpu-trace" }
proptest = "1.5"

[dev-dependencies]
aero-dxbc = { path = "../aero-dxbc", features = ["test-utils"] }
pollster = "0.3"
pretty_assertions = "1"
serde_json = "1"
naga = { version = "24.0.0", features = ["wgsl-in", "glsl-out"] }
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"

[[bench]]
name = "tile_diff"
harness = false

[[bench]]
name = "cmd_stream"
harness = false

[[bench]]
name = "bc_decompress"
harness = false
