[package]
name = "aero-jit-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
# Internal feature used by the build system to ensure the threaded/shared-memory
# build is fully "thread-ready" for wasm-bindgen's threads transform. This must
# not affect the public JS API.
wasm-threaded = []

[lib]
crate-type = ["cdylib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
aero-jit-x86 = { path = "../aero-jit-x86" }
wasm-bindgen = "0.2"
js-sys = "0.3"
