[package]
name = "aero-jit-wasm"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Browser wasm-bindgen Tier-1 JIT compiler (x86 -> standalone WASM blocks) for Aero"
repository = "https://github.com/wilsonzlin/aero"

[features]
# Internal feature used by the build system to ensure the threaded/shared-memory
# build is fully "thread-ready" for wasm-bindgen's threads transform. This must
# not affect the public JS API.
wasm-threaded = []

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Tier-1 inline-TLB codegen is behind a cargo feature in `aero-jit-x86`; enable it here so the
# exported `inline_tlb` option can actually affect emitted WASM imports/codegen.
aero-jit-x86 = { path = "../aero-jit-x86", features = ["tier1-inline-tlb"] }
wasm-bindgen = "0.2"
js-sys = "0.3"

[dev-dependencies]
# Native unit tests validate the emitted WASM import set via `wasmparser`.
aero-jit-x86 = { path = "../aero-jit-x86", features = ["tier1-inline-tlb"] }
aero-types = { path = "../aero-types" }
wasmparser = "0.244.0"
