[package]
name = "aero-jit-x86"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = []
# Emit an inline direct-mapped TLB + direct-RAM fast-path for Tier-1 WASM codegen.
tier1-inline-tlb = []
[dependencies]
wasm-encoder = "0.244.0"
thiserror = "2.0.17"
aero-cpu-core = { path = "../aero-cpu-core" }
aero-types = { path = "../aero-types" }
aero-x86 = { path = "../aero-x86" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wasmtime = "40.0.1"

[dev-dependencies]
memoffset = "0.9"
rand = "0.8.5"
rand_chacha = "0.3"
wasmparser = "0.244.0"
wasmi = "1.0.7"
