[package]
name = "aero-l2-proxy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aero-l2-protocol = { path = "../aero-l2-protocol" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aero-net-stack = { path = "../aero-net-stack" }
anyhow = "1"
axum = { version = "0.7.9", features = ["ws"] }
base64 = "0.22"
futures-util = "0.3"
ring = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
trust-dns-resolver = { version = "0.23", default-features = false, features = ["system-config", "tokio-runtime"] }
url = "2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio-tungstenite = "0.26"
