[package]
name = "aero-machine-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "aero-machine"
path = "src/main.rs"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aero-machine = { path = "../aero-machine" }
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25.5", default-features = false, features = ["png"] }

