[package]
name = "aero-machine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aero-cpu-core = { path = "../aero-cpu-core" }
aero-devices = { path = "../devices" }
aero-devices-input = { path = "../aero-devices-input" }
aero-devices-storage = { path = "../aero-devices-storage" }
aero-devices-nvme = { path = "../aero-devices-nvme" }
aero-io-snapshot = { path = "../aero-io-snapshot" }
aero-ipc = { path = "../aero-ipc", features = ["wasm"] }
aero-interrupts = { path = "../aero-interrupts" }
aero-mmu = { path = "../aero-mmu" }
aero-net-backend = { path = "../aero-net-backend" }
aero-net-pump = { path = "../aero-net-pump" }
aero-pc-platform = { path = "../aero-pc-platform" }
aero-platform = { path = "../platform" }
aero-snapshot = { path = "../aero-snapshot", features = ["io-snapshot"] }
aero-gpu-vga = { path = "../aero-gpu-vga", features = ["io-snapshot"] }
aero-storage = { path = "../aero-storage" }
# Machine snapshots include E1000 runtime state via `aero_snapshot::io_snapshot_bridge`, so we
# must build the NIC model with its `io-snapshot` support enabled.
aero-net-e1000 = { path = "../aero-net-e1000", features = ["io-snapshot"] }
aero-virtio = { path = "../aero-virtio", default-features = false }
firmware = { path = "../firmware" }
memory = { path = "../memory" }

[dev-dependencies]
pretty_assertions = "1"
aero-usb = { path = "../aero-usb" }
