[package]
name = "aero-machine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
aero-cpu-core = { path = "../aero-cpu-core" }
aero-devices = { path = "../devices" }
aero-devices-input = { path = "../aero-devices-input" }
aero-devices-gpu = { path = "../aero-devices-gpu" }
aero-devices-storage = { path = "../aero-devices-storage" }
aero-devices-nvme = { path = "../aero-devices-nvme" }
aero-io-snapshot = { path = "../aero-io-snapshot" }
aero-ipc = { path = "../aero-ipc", features = ["wasm"] }
aero-interrupts = { path = "../aero-interrupts" }
aero-mmu = { path = "../aero-mmu" }
aero-net-backend = { path = "../aero-net-backend" }
aero-net-pump = { path = "../aero-net-pump" }
aero-pc-platform = { path = "../aero-pc-platform" }
aero-pci-firmware-adapter = { path = "../aero-pci-firmware-adapter" }
aero-pc-constants = { path = "../aero-pc-constants" }
aero-platform = { path = "../platform" }
aero-snapshot = { path = "../aero-snapshot", features = ["io-snapshot"] }
aero-gpu-vga = { path = "../aero-gpu-vga", features = ["io-snapshot", "integration-memory", "integration-platform"] }
aero-protocol = { path = "../../emulator/protocol" }
aero-storage = { path = "../aero-storage" }
# Synthetic USB HID input devices (keyboard/mouse/gamepad) are modelled via `aero-usb`.
aero-usb = { path = "../aero-usb" }
# Machine snapshots include E1000 runtime state via `aero_snapshot::io_snapshot_bridge`, so we
# must build the NIC model with its `io-snapshot` support enabled.
aero-net-e1000 = { path = "../aero-net-e1000", features = ["io-snapshot"] }
aero-virtio = { path = "../aero-virtio", default-features = false }
firmware = { path = "../firmware" }
memory = { path = "../memory" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aero-shared = { path = "../aero-shared" }

[target.'cfg(all(target_arch = "wasm32", target_feature = "atomics"))'.dependencies]
aero-shared = { path = "../aero-shared" }

[dev-dependencies]
pretty_assertions = "1"
aero-edid = { path = "../aero-edid" }
