[package]
name = "aero-machine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
# Enables shared-memory/threads-related helpers on wasm32 (e.g. publishing scanout state into a
# shared header owned by the browser runtime). This is intended to be driven by build-system
# features (see `aero-wasm`'s `wasm-threaded` feature).
wasm-threaded = ["dep:aero-shared", "memory/wasm-threaded", "aero-gpu-vga/wasm-threaded"]
# Enables the native wgpu-based AeroGPU execution backend.
aerogpu-wgpu-backend = ["aero-devices-gpu/wgpu-backend"]
# Compatibility alias (matches `aero-devices-gpu`).
wgpu-backend = ["aerogpu-wgpu-backend"]

[dependencies]
aero-cpu-core = { path = "../aero-cpu-core" }
aero-devices = { path = "../devices" }
# Shared AeroGPU device helpers (ring utilities, optional backend bindings).
aero-devices-gpu = { path = "../aero-devices-gpu" }
aero-devices-input = { path = "../aero-devices-input" }
aero-devices-storage = { path = "../aero-devices-storage" }
aero-devices-nvme = { path = "../aero-devices-nvme" }
aero-io-snapshot = { path = "../aero-io-snapshot" }
aero-ipc = { path = "../aero-ipc", features = ["wasm"] }
aero-interrupts = { path = "../aero-interrupts" }
aero-mmu = { path = "../aero-mmu" }
aero-net-backend = { path = "../aero-net-backend" }
aero-net-pump = { path = "../aero-net-pump" }
aero-pc-platform = { path = "../aero-pc-platform" }
aero-pci-firmware-adapter = { path = "../aero-pci-firmware-adapter" }
aero-pc-constants = { path = "../aero-pc-constants" }
aero-platform = { path = "../platform" }
aero-snapshot = { path = "../aero-snapshot", features = ["io-snapshot"] }
aero-gpu-vga = { path = "../aero-gpu-vga", features = ["io-snapshot", "integration-memory", "integration-platform"] }
aero-protocol = { path = "../../emulator/protocol" }
aero-storage = { path = "../aero-storage" }
# Synthetic USB HID input devices (keyboard/mouse/gamepad/consumer-control) are modelled via
# `aero-usb` and exposed through `aero_machine::Machine` injection APIs.
aero-usb = { path = "../aero-usb" }
# Machine snapshots include E1000 runtime state via `aero_snapshot::io_snapshot_bridge`, so we
# must build the NIC model with its `io-snapshot` support enabled.
aero-net-e1000 = { path = "../aero-net-e1000", features = ["io-snapshot"] }
aero-virtio = { path = "../aero-virtio", default-features = false }
firmware = { path = "../firmware" }
memory = { path = "../memory" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
aero-shared = { path = "../aero-shared" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
aero-shared = { path = "../aero-shared", optional = true }

[dev-dependencies]
pretty_assertions = "1"
aero-edid = { path = "../aero-edid" }
