[package]
name = "aero-mmu"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
memory = { path = "../memory", optional = true }
aero-mem = { path = "../aero-mem", optional = true }

[dev-dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.5"

[features]
default = []
stats = []
memory-bus = ["dep:memory"]
aero-mem-bus = ["dep:aero-mem"]

[[bench]]
name = "tlb_lookup"
harness = false

[[bench]]
name = "translate"
harness = false

[[test]]
name = "aero_mem_open_bus"
path = "tests/aero_mem_open_bus.rs"
required-features = ["aero-mem-bus"]
